--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         </div>
       </div>
     </div> -->
-  <!-- </section> -->
+
   <section class="section">
     <div class="container is-max-widescreen">
       <div class="columns is-centered has-text-centered">
@@ -326,32 +326,41 @@
   <section class="section">
     <div class="container is-max-widescreen">
       <div class="columns is-centered has-text-centered">
-        <div class="rows">
-          <div class="row is-full-width is-centered">
-            <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
-            <div class="container is-centered">
-              TODO grid of videos
-              <div class="container is-centered">
-                <div class="columns is-vcentered  is-centered">
-                  <img src="media/mutlitask_full.png" alt="Full multi-task results" />
-                </div>
-              </div>
-              <br>
-              The figure shows the performance of PWM and TDMPC2 on 30 and 80 multi-task benchmarks with
-              results over 10 random seeds. PWM is able to outperform TDMPC2 while using the same world model without
-              any form of online planning, making it the more scalable approach to large world models. The right
-              figure compares PWM, a multi-task policy, with single-task experts SAC and DreamerV3. It is impressive
-              that PWM is able to match their performance while being multi-task and only trained on offline data.
-            </div>
+        <div class="column is-full">
+          <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
+          TODO videos
+          <div class="columns is-vcentered  is-centered">
+            <img src="media/mutlitask_full.png" alt="Full multi-task results" />
           </div>
-          <div class="row is-full-width is-centered">
-            We strongly believe that increasingly large world models of billions of parameters and policy learning
-            strategies such as PWM can unlock dexterous robotics at scale.
-          </div>
+          <p>
+            The figure shows the performance of PWM and TDMPC2 on 30 and 80 multi-task benchmarks with
+            results over 10 random seeds. PWM is able to outperform TDMPC2 while using the same world model without
+            any form of online planning, making it the more scalable approach to large world models. The right
+            figure compares PWM, a multi-task policy, with single-task experts SAC and DreamerV3. It is impressive
+            that PWM is able to match their performance while being multi-task and only trained on offline data.
+          </p>
+        </div>
+        <div class="row is-full-width is-centered">
+          We strongly believe that increasingly large world models of billions of parameters and policy learning
+          strategies such as PWM can unlock dexterous robotics at scale.
         </div>
       </div>
     </div>
   </section>
+
+  <section class="section">
+    <div class="container is-max-widescreen">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-full">
+          <p>
+            We strongly believe that increasingly large world models of billions of parameters and policy learning
+            strategies such as PWM can unlock dexterous robotics at scale.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
   <footer class="footer">
