--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
           TODO videos
-          <div class="columns is-vcentered  is-centered">
-            <img src="media/mutlitask_full.png" alt="Full multi-task results" />
+          <div class="columns is-centered">
+            <img src="media/mutlitask_full.png" alt="Full multi-task results" class="column is-two-thirds" />
           </div>
           <p>
             The figure shows the performance of PWM and TDMPC2 on 30 and 80 multi-task benchmarks with
@@ -339,10 +339,6 @@
             figure compares PWM, a multi-task policy, with single-task experts SAC and DreamerV3. It is impressive
             that PWM is able to match their performance while being multi-task and only trained on offline data.
           </p>
-        </div>
-        <div class="row is-full-width is-centered">
-          We strongly believe that increasingly large world models of billions of parameters and policy learning
-          strategies such as PWM can unlock dexterous robotics at scale.
         </div>
       </div>
     </div>
