--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="stylesheet" href="./static/css/styles.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script defer src="./static/js/fontawesome.all.min.js"></script>
@@ -328,7 +329,20 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
-          TODO videos
+          <div class="media-grid">
+            <!-- Example for 2x5 grid, adjust src paths accordingly -->
+            <video src="media/button-press-topdown-wall.mp4" autoplay muted loop></video>
+            <img src="media/acrobot-swingup.gif" alt="Gif 1">
+            <video src="media/coffee-pull.mp4" autoplay muted loop></video>
+            <img src="media/cheetah-run.gif" alt="Gif 1">
+            <video src="media/door-open.mp4" autoplay muted loop></video>
+            <img src="media/finger-spin.gif" alt="Gif 1">
+            <video src="media/plate-slide-back-side.mp4" autoplay muted loop></video>
+            <img src="media/quadruped-run.gif" alt="Gif 1">
+            <video src="media/stick-pull.mp4" autoplay muted loop></video>
+            <img src="media/reacher-hard.gif" alt="Gif 1">
+            <!-- Repeat for all media -->
+          </div>
           <div class="columns is-centered">
             <img src="media/mutlitask_full.png" alt="Full multi-task results" class="column is-two-thirds" />
           </div>
