make videos smaller

--- a/index.html
+++ b/index.html
@@ -330,15 +330,15 @@
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
           <div class="media-grid">
             <!-- Example for 2x5 grid, adjust src paths accordingly -->
-            <video src="media/button-press-topdown-wall.mp4" autoplay muted loop></video>
+            <video src="media/button-press-topdown-wall.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/acrobot-swingup.gif" alt="Gif 1">
-            <video src="media/coffee-pull.mp4" autoplay muted loop></video>
+            <video src="media/coffee-pull.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/cheetah-run.gif" alt="Gif 1">
-            <video src="media/door-open.mp4" autoplay muted loop></video>
+            <video src="media/door-open.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/finger-spin.gif" alt="Gif 1">
-            <video src="media/plate-slide-back-side.mp4" autoplay muted loop></video>
+            <video src="media/plate-slide-back-side.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/quadruped-run.gif" alt="Gif 1">
-            <video src="media/stick-pull.mp4" autoplay muted loop></video>
+            <video src="media/stick-pull.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/reacher-hard.gif" alt="Gif 1">
             <!-- Repeat for all media -->
           </div>
