--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
           <div class="media-grid">
             <!-- Example for 2x5 grid, adjust src paths accordingly -->
-            <video src="media/button-press-topdown-wall.mp4" width="128" height="128" autoplay muted loop></video>
+            <!-- <video src="media/button-press-topdown-wall.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/acrobot-swingup.gif" alt="Gif 1">
             <video src="media/coffee-pull.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/cheetah-run.gif" alt="Gif 1">
@@ -339,7 +339,7 @@
             <video src="media/plate-slide-back-side.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/quadruped-run.gif" alt="Gif 1">
             <video src="media/stick-pull.mp4" width="128" height="128" autoplay muted loop></video>
-            <img src="media/reacher-hard.gif" alt="Gif 1">
+            <img src="media/reacher-hard.gif" alt="Gif 1"> -->
             <video src="media/pwm-videos/dmcontrol-formatted/fish-swim.mp4" width="128" height="128" autoplay muted loop></video>
             <video src="media/pwm-videos/metaworld-formatted/mw-coffee-button.mp4" width="128" height="128" autoplay muted loop></video>
             <video src="media/pwm-videos/dmcontrol-formatted/cheetah-run-back.mp4" width="128" height="128" autoplay muted loop></video>
