--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="column is-four-fifths">
           <h2 class="title is-3">Method overview</h2>
           <div class="columns is-vcentered  is-centered">
-            <img src="media/teaser.drawio.png" alt="PWM visual explanation" />
+            <video src="media/wm-animation.mp4" autoplay muted loop></video>
           </div>
           <br>
           Instead of building world models into algorithms, we propose using large-scale multi-task world models as
