Remove text-justified

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">Abstract</h2>
-          <div class="content has-text-justified">
+          <div class="content">
             We propose Policy learning through World Models (PWM), a novel model-based Reinforcement Learning (RL)
             algorithm for learning continuous control policies from large multi-task world models. Instead of treating
             world models as components of methods, we suggest using them as generalist differentiable physics
