--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">Abstract</h2>
-          <div class="content">
+          <div class="content has-text-justified">
             We propose Policy learning through World Models (PWM), a novel model-based Reinforcement Learning (RL)
             algorithm for learning continuous control policies from large multi-task world models. Instead of treating
             world models as components of methods, we suggest using them as generalist differentiable physics
@@ -325,7 +325,7 @@
 
   <section class="section">
     <div class="container is-max-widescreen">
-      <div class="columns is-centered has-text-centered">
+      <div class="columns is-centered has-text-centered interpolation-panel">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
           <div class="media-grid">
