--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Single-task results</span></h2>
-          <div class="columns is-centered">
+          <div class="columns is-centered interpolation-panel">
             <video id="dflex" autoplay muted loop playsinline style="height: auto;">
               <source src="media/dflex.mp4" type="video/mp4">
             </video>
