--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Single-task results</span></h2>
-          <div class="columns is-centered interpolation-panel">
+          <div class="columns is-centered">
             <video id="dflex" autoplay muted loop playsinline style="height: auto;">
               <source src="media/dflex.mp4" type="video/mp4">
             </video>
@@ -328,7 +328,6 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
-          <div class="columns interpolation-panel">
             <div class="media-grid">
               <!-- Example for 2x5 grid, adjust src paths accordingly -->
               <!-- <video src="media/button-press-topdown-wall.mp4" width="128" height="128" autoplay muted loop></video>
@@ -353,7 +352,6 @@
               <video src="media/pwm-videos/metaworld-formatted/mw-lever-pull.mp4" width="128" height="128" autoplay muted loop></video>
               <!-- Repeat for all media -->
             </div>
-          </div>
           <div class="columns is-centered">
             <img src="media/mutlitask_full.png" alt="Full multi-task results" class="column is-two-thirds" />
           </div>
