--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
-          <div class="media-grid">
+          <div class="media-grid is-centered">
             <!-- Example for 2x5 grid, adjust src paths accordingly -->
             <!-- <video src="media/button-press-topdown-wall.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/acrobot-swingup.gif" alt="Gif 1">
