--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full">
           <h2 class="title is-3"><span class="dperact">Multi-task results</span></h2>
-          <div class="media-grid is-centered">
+          <div class="media-grid">
             <!-- Example for 2x5 grid, adjust src paths accordingly -->
             <!-- <video src="media/button-press-topdown-wall.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/acrobot-swingup.gif" alt="Gif 1">
@@ -340,16 +340,16 @@
             <img src="media/quadruped-run.gif" alt="Gif 1">
             <video src="media/stick-pull.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/reacher-hard.gif" alt="Gif 1"> -->
-            <video src="media/pwm-videos/dmcontrol-formatted/fish-swim.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-coffee-button.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/cheetah-run-back.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-drawer-close.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/walker-run.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-hammer.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk-backwards.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-push-wall.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk.mp4" width="128" height="128" autoplay muted loop></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-lever-pull.mp4" width="128" height="128" autoplay muted loop></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/fish-swim.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-coffee-button.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/cheetah-run-back.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-drawer-close.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/walker-run.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-hammer.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk-backwards.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-push-wall.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-lever-pull.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
             <!-- Repeat for all media -->
           </div>
           <div class="columns is-centered">
