--- a/index.html
+++ b/index.html
@@ -251,6 +251,21 @@
     </div>
   </section>
 
+  <!-- Paper video. -->
+  <section class="section">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <h2 class="title is-3">Video</h2>
+        <div class="publication-video">
+          <video controls width="720" preload="none" loading="lazy">
+            <source src="media/pwm_small.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
