update google tag

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PWM</title>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FV4ZJ9PVSV"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-FV4ZJ9PVSV');
-  </script>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5VSL39R9');</script>
+  <!-- End Google Tag Manager -->
 
   <script>
     function updateSingleVideo() {
@@ -355,16 +357,26 @@
             <img src="media/quadruped-run.gif" alt="Gif 1">
             <video src="media/stick-pull.mp4" width="128" height="128" autoplay muted loop></video>
             <img src="media/reacher-hard.gif" alt="Gif 1"> -->
-            <video src="media/pwm-videos/dmcontrol-formatted/fish-swim.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-coffee-button.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/cheetah-run-back.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-drawer-close.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/walker-run.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-hammer.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk-backwards.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-push-wall.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
-            <video src="media/pwm-videos/metaworld-formatted/mw-lever-pull.mp4" width="128" height="128" autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/fish-swim.mp4" width="128" height="128" autoplay muted loop
+              style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-coffee-button.mp4" width="128" height="128" autoplay
+              muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/cheetah-run-back.mp4" width="128" height="128" autoplay
+              muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-drawer-close.mp4" width="128" height="128" autoplay
+              muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/walker-run.mp4" width="128" height="128" autoplay muted
+              loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-hammer.mp4" width="128" height="128" autoplay muted loop
+              style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk-backwards.mp4" width="128" height="128"
+              autoplay muted loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-push-wall.mp4" width="128" height="128" autoplay muted
+              loop style="height: auto;"></video>
+            <video src="media/pwm-videos/dmcontrol-formatted/walker-walk.mp4" width="128" height="128" autoplay muted
+              loop style="height: auto;"></video>
+            <video src="media/pwm-videos/metaworld-formatted/mw-lever-pull.mp4" width="128" height="128" autoplay muted
+              loop style="height: auto;"></video>
             <!-- Repeat for all media -->
           </div>
           <div class="columns is-centered">
