--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PWM</title>
 
+  <style>
+    .video-container {
+      display: inline-block;
+      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.5);
+    }
+  </style>
+
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
