add paper and new links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,26 @@
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
+                    <span>Openreview</span>
+                  </a>
+                </span>
+
+                <span class="link-block">
+                  <a target="_blank" href="media/pwm.pdf" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
                     <span>Paper</span>
+                  </a>
+                </span>
+
+                <span class="link-block">
+                  <a target="_blank" href="https://draftable.com/compare/koPSZmSHYsti"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Version comparison</span>
                   </a>
                 </span>
 
