--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a target="_blank" href="https://openreview.net/forum?id=VQOoHBRbpC"
+                  <a target="_blank" href="https://openreview.net/forum?id=hOELrZfg0J"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -77,7 +77,7 @@
                   </a>
                 </span>
 
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a target="_blank" href="https://draftable.com/compare/koPSZmSHYsti"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -85,7 +85,7 @@
                     </span>
                     <span>Version comparison</span>
                   </a>
-                </span>
+                </span> -->
 
                 <!-- Arxiv Link. -->
                 <!-- <span class="link-block">
