--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
           <h2 class="title is-3">Abstract</h2>
           <div class="content has-text-justified">
             Reinforcement Learning (RL) has made significant strides in complex tasks but struggles in multi-task
-            settings with different embodiments. World models offer scalability by learning a simulation of the
-            environment, yet they often rely on inefficient gradient-free optimization methods. In contrast,
-            gradient-based methods exhibit lower variance but fail to handle discontinuities. Our research reveals that
-            well-regularized world models can generate smoother optimization landscapes than the actual dynamics,
+            settings with different embodiments. World models methods offer scalability by learning a simulation of the
+            environment, but often rely on inefficient gradient-free optimization methods for policy extraction. In
+            contrast, gradient-based methods exhibit lower variance but fail to handle discontinuities. Our work reveals
+            that well-regularized world models can generate smoother optimization landscapes than the actual dynamics,
             facilitating more effective first-order optimization. We introduce Policy learning with multi-task World
-            Models (PWM), a novel model-based RL algorithm for continuous control policies. Initially, the world model
-            is pre-trained on offline data, and then policies are extracted from it using first-order optimization in
-            less than 10 minutes per task. PWM effectively solves tasks with up to 152 action dimensions and outperforms
+            Models (PWM), a novel model-based RL algorithm for continuous control. Initially, the world model is
+            pre-trained on offline data, and then policies are extracted from it using first-order optimization in less
+            than 10 minutes per task. PWM effectively solves tasks with up to 152 action dimensions and outperforms
             methods using ground-truth dynamics. Additionally, PWM scales to an 80-task setting, achieving up to 27%
             higher rewards than existing baselines, without relying on costly online planning.
           </div>
@@ -178,14 +178,14 @@
   <!-- Paper video. -->
   <section class="section">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-two-thirds">
-        <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
-          <video controls width="720" preload="none" loading="lazy">
-            <source src="media/pwm_small.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
+      <!-- <div class="column is-two-thirds"> -->
+      <h2 class="title is-3">Video</h2>
+      <div class="publication-video">
+        <video controls width="720" preload="none" loading="lazy">
+          <source src="media/pwm_small.mov" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <!-- </div> -->
       </div>
     </div>
   </section>
