--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
   <!-- Paper video. -->
   <section class="section">
     <div class="columns is-centered has-text-centered">
-      <!-- <div class="column is-two-thirds"> -->
-      <h2 class="title is-3">Video</h2>
-      <div class="publication-video">
+      <div class="column is-two-thirds">
+        <h2 class="title is-3">Video</h2>
+        <!-- <div class="publication-video"> -->
         <video controls width="720" preload="none" loading="lazy">
           <source src="media/pwm_small.mov" type="video/mp4">
           Your browser does not support the video tag.
-        </video>
-        <!-- </div> -->
+          <!-- </video> -->
       </div>
+    </div>
     </div>
   </section>
 
