--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
     </div>
   </section>
 
+  <!-- Teaser video. -->
+  <section class="section">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <video autoplay loop muted width="720" preload="none" loading="lazy">
+          <source src="media/pwm_teaser.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </div>
+    </div>
+  </section>
+
   <!-- Abstract. -->
   <section class="section">
     <div class="container is-max-desktop">
@@ -180,13 +191,10 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
         <h2 class="title is-3">Video</h2>
-        <!-- <div class="publication-video"> -->
         <video controls width="720" preload="none" loading="lazy">
           <source src="media/pwm_small.mov" type="video/mp4">
           Your browser does not support the video tag.
-          <!-- </video> -->
       </div>
-    </div>
     </div>
   </section>
 
